# first-api

./: .gitignore  Cargo.toml  README.md
src/: database.rs  handlers.rs  lib_.rs  main.rs  models.rs  router.rs  server_.rs  types.rs
src/controllers/: login.rs  person.rs
src/handlers/: http_response.rs  login.rs  middleware.rs  person.rs  user.rs
src/lib_/: hashing256.rs  jwt_token.rs
src/models/: person.rs  person_new.rs  user.rs  user_new.rs
src/router/: login.rs  person.rs
src/types/: assignatures.rs  inicio.rs  person.rs
