[package]
name = "first-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
base64ct = "1.6.0"
chrono = "0.4.38"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
jwt = "0.16.0"
rand = "0.8.5"
rusqlite = {version = "0.32.1", features = ["bundled"]}
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
sha2 = "0.10.8"
